--- a/app.json
+++ b/app.json
@@ -8,7 +8,7 @@
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "splash": {
-      "image": "./assets/images/splash.png",
+      "image": "./assets/images/smart-grow-logo@3x.jpg",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
