--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-native-firebase/auth": "^20.3.0",
     "@react-native-google-signin/google-signin": "^12.2.1",
-    "@react-navigation/native": "^6.0.2",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/stack": "^6.4.1",
     "@types/firebase": "^3.2.1",
     "expo": "~51.0.22",
     "expo-auth-session": "~5.5.2",
@@ -36,6 +37,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.3",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "3.31.1",
