--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-firebase/app": "^20.4.0",
     "@react-native-firebase/auth": "^20.3.0",
+    "@react-native-firebase/messaging": "^20.4.0",
     "@react-native-google-signin/google-signin": "^12.2.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
@@ -38,6 +40,8 @@
     "react-dom": "18.2.0",
     "react-icons": "^5.2.1",
     "react-native": "0.74.3",
+    "react-native-circular-progress": "^1.4.0",
+    "react-native-circular-progress-indicator": "^4.4.2",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-reanimated": "~3.10.1",
